# frenet_optimal_trajectory_easy

./: CMakeLists.txt  main.cpp
include/: py_cpp_struct.h
